// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ForgotPassword snapshot matches the rendered markup (dark) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1bcl2ym"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-16fpfm7-MuiPaper-root"
      style="--Paper-shadow: none;"
    >
      <div
        class="MuiBox-root css-1wxkees"
      />
      <div
        class="MuiBox-root css-1yp9m95"
      >
        <div
          class="MuiBox-root css-cacgvk"
        >
          <div
            class="MuiBox-root css-v3d01d"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1sdz7zf-MuiSvgIcon-root"
              data-testid="LockResetOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M13 3c-4.97 0-9 4.03-9 9 0 .06.01.12.01.19l-1.84-1.84-1.41 1.41L5 16l4.24-4.24-1.41-1.41-1.82 1.82c0-.06-.01-.11-.01-.17 0-3.86 3.14-7 7-7s7 3.14 7 7-3.14 7-7 7c-1.9 0-3.62-.76-4.88-1.99L6.7 18.42C8.32 20.01 10.55 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9m2 8v-1c0-1.1-.9-2-2-2s-2 .9-2 2v1c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-3c0-.55-.45-1-1-1m-1 0h-2v-1c0-.55.45-1 1-1s1 .45 1 1z"
              />
            </svg>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1nw21cn-MuiTypography-root"
          >
            Reset your password
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-11dv13k-MuiTypography-root"
          >
            Verify your email to set a new password.
          </p>
        </div>
        <div
          class="MuiBox-root css-thdcs7"
        >
          <div
            class="MuiBox-root css-172hjuw"
          >
            <div
              class="MuiBox-root css-1drl8dg"
            >
              1
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1gg53op-MuiTypography-root"
            >
              Verify email
            </p>
          </div>
          <div
            class="MuiBox-root css-1a0575x"
          />
          <div
            class="MuiBox-root css-172hjuw"
          >
            <div
              class="MuiBox-root css-9arvzo"
            >
              2
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1f2suaz-MuiTypography-root"
            >
              New password
            </p>
          </div>
        </div>
        <form>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1fgbi8u-MuiFormControl-root-MuiTextField-root"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-113d811-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="true"
              for=":r2:"
              id=":r2:-label"
            >
              Email
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ljffdk-MuiFormLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart css-ot336b-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1nowbqt-MuiInputAdornment-root"
              >
                <span
                  aria-hidden="true"
                  class="notranslate"
                >
                  ​
                </span>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-9wn9cg-MuiSvgIcon-root"
                  data-testid="EmailOutlinedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart css-2u11ia-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r2:"
                required=""
                type="email"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-w1u3ce"
                >
                  <span>
                    Email *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-1a3s8yf-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="submit"
          >
            Verify Email
          </button>
        </form>
        <div
          class="MuiBox-root css-15r83f5"
        >
          <span
            class="MuiBox-root css-114u8t4"
          >
            ← Back to sign in
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ForgotPassword snapshot matches the rendered markup (light) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-zedmph"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-8qdi8o-MuiPaper-root"
      style="--Paper-shadow: none;"
    >
      <div
        class="MuiBox-root css-1wxkees"
      />
      <div
        class="MuiBox-root css-1yp9m95"
      >
        <div
          class="MuiBox-root css-cacgvk"
        >
          <div
            class="MuiBox-root css-v3d01d"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1sdz7zf-MuiSvgIcon-root"
              data-testid="LockResetOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M13 3c-4.97 0-9 4.03-9 9 0 .06.01.12.01.19l-1.84-1.84-1.41 1.41L5 16l4.24-4.24-1.41-1.41-1.82 1.82c0-.06-.01-.11-.01-.17 0-3.86 3.14-7 7-7s7 3.14 7 7-3.14 7-7 7c-1.9 0-3.62-.76-4.88-1.99L6.7 18.42C8.32 20.01 10.55 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9m2 8v-1c0-1.1-.9-2-2-2s-2 .9-2 2v1c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-3c0-.55-.45-1-1-1m-1 0h-2v-1c0-.55.45-1 1-1s1 .45 1 1z"
              />
            </svg>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1x9ifx2-MuiTypography-root"
          >
            Reset your password
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-v045vi-MuiTypography-root"
          >
            Verify your email to set a new password.
          </p>
        </div>
        <div
          class="MuiBox-root css-thdcs7"
        >
          <div
            class="MuiBox-root css-172hjuw"
          >
            <div
              class="MuiBox-root css-1drl8dg"
            >
              1
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1gg53op-MuiTypography-root"
            >
              Verify email
            </p>
          </div>
          <div
            class="MuiBox-root css-1c3wjdw"
          />
          <div
            class="MuiBox-root css-172hjuw"
          >
            <div
              class="MuiBox-root css-15iz2b3"
            >
              2
            </div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-d6sdlj-MuiTypography-root"
            >
              New password
            </p>
          </div>
        </div>
        <form>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1bstbtj-MuiFormControl-root-MuiTextField-root"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-113d811-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="true"
              for=":r0:"
              id=":r0:-label"
            >
              Email
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ljffdk-MuiFormLabel-asterisk"
              >
                 *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart css-ot336b-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1nowbqt-MuiInputAdornment-root"
              >
                <span
                  aria-hidden="true"
                  class="notranslate"
                >
                  ​
                </span>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dps64n-MuiSvgIcon-root"
                  data-testid="EmailOutlinedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0-8 5-8-5zm0 12H4V8l8 5 8-5z"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart css-2u11ia-MuiInputBase-input-MuiOutlinedInput-input"
                id=":r0:"
                required=""
                type="email"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-w1u3ce"
                >
                  <span>
                    Email *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-1a3s8yf-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="submit"
          >
            Verify Email
          </button>
        </form>
        <div
          class="MuiBox-root css-15r83f5"
        >
          <span
            class="MuiBox-root css-1ecjzmn"
          >
            ← Back to sign in
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
